<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:orientation="vertical"
    android:id="@+id/login_content"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <ImageView
                android:layout_width="200dp"
                android:layout_height="225dp"
                android:id="@+id/imageView"
                android:background="@drawable/logo"
                android:layout_marginTop="70dp"
                android:layout_marginLeft="70dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/userNameLbl"
                android:id="@+id/userNameLbl"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="50dp" />

            <EditText
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/userNameTxt"
                android:layout_marginLeft="180dp"
                android:layout_marginTop="-40dp"

                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/passwordLbl"
                android:id="@+id/passwordLbl"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="30dp" />



            <EditText
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/passwordTxt"
                android:layout_marginLeft="180dp"
                android:layout_marginTop="-40dp"
                />



            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/loginBtn"
                android:id="@+id/loginBtn"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Or create new account"

                android:gravity="center_horizontal" />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Sign up"
                android:id="@+id/signUpBtn"
                android:layout_marginBottom="50dp"
                />

        </LinearLayout>
    </ScrollView>




</LinearLayout>
