<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" android:id="@+id/prof" android:padding="5dp">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...
                >
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Cancel"
                    android:id="@+id/cancelBtn" />
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Submit"
                    android:layout_weight="1"
                    android:id="@+id/submitAccountButton" />
...
